# traffic-sim

./: .gitignore  README.md  config.py  env.example  pyproject.toml  requirements.txt  routes.rou.xml  run.sh  run_ab.py  run_simulation.py  server.py  simulation_orchestrator.py
api/: server.py
controllers/: traffic_light_controller.py
data/net/: outer_edges.dst.xml  outer_edges.src.xml  san_lorenzo.net.xml
data/net/restrictions/: truck_restrictions.xml
data/osm/: san_lorenzo.osm
detectors/: __init__.py  bottleneck_detector.py
scripts/: _sim_utils.py  aggregate_seeds.py  compare_three_runs.py  generate_webster_timing.py  run_multiseed.py  run_sim_c.py
scripts/simulation/: config_simulation.py  generate_trips.py  main.py
services/: metrics_calculator.py  traffic_control_client.py
utils/: descriptive_names.py  logger.py  metrics_validator.py  signal_utils.py  traci_helpers.py
visualization/: __init__.py  ab_test.py  parsers.py  plots.py  sumo_tools.py
