[project]
name = "traffic-sim"
version = "0.1.0"
description = "Traffic optimization and simulation service using FastAPI, fuzzy logic, clustering, and PSO."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
dependencies = [
    "traci==1.25.0",
    "sumolib==1.25.0",
    "requests==2.32.3",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "python-dotenv==1.1.0",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "matplotlib>=3.10.8",
    "lxml>=6.0.2",
    "shapely>=2.1.2",
    "seaborn>=0.13.2",
    "scipy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "controllers", "detectors", "services", "utils"]

[project.optional-dependencies]
speedups = [
    "httptools==0.6.4",
    "uvloop==0.21.0",
]

dev = [
    "ruff>=0.6.0,<1.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["api", "controllers", "detectors", "services", "utils"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E203",  # espacio antes de ':' (para compatibilidad con muchos formateadores)
    "E501",  # líneas largas permitidas (line too long)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


